<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
...
    <string name="selectDilution">Select amount of dilution</string>
    <plurals name="dilutions">
        <item quantity="one">No Dilution</item>
        <item quantity="many">%1$d Times Dilution</item>
        <item quantity="other">%1$d Times Dilution</item>
    </plurals>
    <string name="noDilution">No Dilution</string>
    <string name="timesDilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="customDilution">Custom Dilution</string>
    <string name="enterDilutionFactor">Enter Dilution Factor</string>
    <string name="testWithDilution">Test with Dilution</string>

    <!--Test Progress Screen-->
    <string name="placeDevice">Place device face down on a flat surface</string>
...
    <string name="doNotMoveDeviceDuringTest">Do not move the phone during the test</string>
    <string name="errorTestFailed">Colour does not match any calibrated colours.</string>
    <string name="chamberNotFound">Could not complete test.</string>
    <string name="checkChamberPlacement">Check that the chamber has been placed correctly.</string>

    <!--Result Screen-->
    <string name="acceptResult">Accept Result</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>

    <!--Permission-->
    <string name="cameraPermissions">Camera permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>

    <string name="bc_dilution_1">Rinse the mixing chamber with deionised water.</string>
...

    <!-- About Screen -->
    <string name="copyrightMessage">Copyright © ffem</string>
    <string name="legalInformation">Legal Information</string>

    <!--Messages-->
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
...
