...
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="name">Name</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="warning">Warning</string>
    <string name="run_test">Run Test</string>
    <string name="start">Start</string>
    <string name="general">General</string>
    <string name="app_slogan">Water Quality System</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
...
