...
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonDilution1"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:minHeight="70dp"
            android:layout_marginTop="25dp"
            android:minWidth="260dp"
            android:text="@string/times_dilution"
...
