...
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/layoutContent4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonStart"
            android:layout_below="@id/toolbar"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/buttonStart"
            style="@style/Button"
...
