...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/image_pageRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/next"
                android:drawableEnd="@drawable/button_arrow_right_selector"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
...
